K8s/aws/booking-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-deployment
  labels:
    app: booking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: booking
  template:
    metadata:
      labels:
        app: booking
    spec:
      containers:
      - name: booking
        image: 962273458546.dkr.ecr.us-east-1.amazonaws.com/booking:1.0.0
        ports:
        - containerPort: 5000
