K8s/aws/partnermanagement-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: partnermanagement-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: partnermanagement
  template:
    metadata:
      labels:
        app: partnermanagement
    spec:
      containers:
        - name: partnermanagement
          image: 962273458546.dkr.ecr.us-east-1.amazonaws.com/partnermanagement:1.0.1
          ports:
            - containerPort: 80
