K8s/aws/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: 962273458546.dkr.ecr.us-east-1.amazonaws.com/payment:1.0.4
          ports:
            - containerPort: 80
