K8s/aws/pmsintegration-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pmsintegration-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pmsintegration
  template:
    metadata:
      labels:
        app: pmsintegration
    spec:
      containers:
        - name: pmsintegration
          image: 962273458546.dkr.ecr.us-east-1.amazonaws.com/pmsintegration:1.0.4
          ports:
            - containerPort: 80
