K8s/aws/pmsintegration-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pmsintegration-service
spec:
  type: LoadBalancer
  selector:
    app: pmsintegration
  ports:
    - port: 80
      targetPort: 80
